data/all_generated_tests/raw_wast_tests/call_StackCorruption_3248.wast
;; 7. **Test Description**: Call a function immediately after manually manipulating the stack.    - **Constraint**: Ensures manual stack adjustments do not interfere with function call mechanisms.    - **Relation to Stack Corruption**: Validates stack consistency post-manipulation when used in further function calls.

(assert_invalid
  (module
    (func $manipulate-stack
      (i32.const 42)
      (drop)
      (call 1)
    )
    (func (param i32))
  )
  "type mismatch"
)